fixed alignation bugs in home and navbar components

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -13,7 +13,7 @@
   margin: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  transition: all 400ms ease-in-out;
+  transition: all 300ms ease-in-out;
 }
 body {
   height: 600vh;
