--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -65,7 +65,6 @@
         font-weight: 600;
         font-size: 1.03rem;
         cursor: pointer;
-        transition: all ease-in-out 400ms;
         border: none;
       }
       .cv {
@@ -118,7 +117,7 @@
     &:hover {
       .iconContainer {
         svg {
-          color: rgb(0, 18, 79);
+          color: rgb(8, 37, 95);
         }
       }
     }
@@ -128,7 +127,7 @@
     &:hover {
       .iconContainer {
         svg {
-          color: rgb(146, 83, 0);
+          color: rgb(208, 201, 7);
         }
       }
     }
@@ -144,7 +143,6 @@
     border-radius: 10px;
     margin-bottom: 2px;
     overflow: hidden;
-    transition: all 400ms ease-in-out;
     cursor: pointer;
     &:hover {
       transform: translateY(0);
@@ -165,7 +163,6 @@
       top: 15%;
       position: block;
       color: $socialIconColor;
-      transition: all ease-in-out 400ms;
     }
   }
 }
